Compositor Backdrop crashes Blender #48589

Closed
opened 2016-06-04 16:05:00 +02:00 by Leon Cheung · 15 comments
Member

System Information
Win8 64bit | GTX680

Blender Version
Broken: 2.77.1 cd768a8

Short description of error
When toggling backdrop in this case, blender crashed.

Exact steps for others to reproduce the error

  1. Open attached file, load any image / sequence for both nodes;
  2. Then try toggling Backdrop.

bakcdrop_with_alpha_over.blend

test_sequence.zip

**System Information** Win8 64bit | GTX680 **Blender Version** Broken: 2.77.1 cd768a8 **Short description of error** When toggling backdrop in this case, blender crashed. **Exact steps for others to reproduce the error** 1. Open attached file, load any image / sequence for both nodes; 2. Then try toggling Backdrop. [bakcdrop_with_alpha_over.blend](https://archive.blender.org/developer/F315992/bakcdrop_with_alpha_over.blend) [test_sequence.zip](https://archive.blender.org/developer/F316129/test_sequence.zip)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Author
Member

PS: It also occures with other nodes like Mix, not sure if something wrong with the Image node.

PS: It also occures with other nodes like Mix, not sure if something wrong with the Image node.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Can't redo a crash here (tested 2.77a and master (7f57c99be87d6cb1b7ac9f005fa79c374812a8b6))

Please attach images to redo the crash (since its possible the images you're using cause a crash).

Can't redo a crash here (tested 2.77a and master (`7f57c99be87d6cb1b7ac9f005fa79c374812a8b6`)) Please attach images to redo the crash (since its possible the images you're using cause a crash).
Author
Member

Yes. I can't reproduce it with 2.77a official release either, but I do reproduce it with the daily builds. (June 2nd, I think). File uploaded, though I tried many different image sequences, even single image.

Yes. I can't reproduce it with 2.77a official release either, but I do reproduce it with the daily builds. (June 2nd, I think). File uploaded, though I tried many different image sequences, even single image.
Author
Member

And I do reproduce it with the daily build today. 04bcaf0

And I do reproduce it with the daily build today. 04bcaf0

Even making both images reference this sequence, I can't redo the bug.
Did you check if this happens on another computer?

Also, its best if you can provide the blend-file and images together in a way we can open and do some steps to re-create the crash.

Since its possible somehow the way I'm referencing the images on load, uses a different image-sequence frame-range or some other detail thats different.
Generally it saves time too, since developers don't have to guess / trial and error to attempt to re-create the error case,

Even making both images reference this sequence, I can't redo the bug. Did you check if this happens on another computer? Also, its best if you can provide the blend-file and images together in a way we can open and do some steps to re-create the crash. Since its possible somehow the way I'm referencing the images on load, uses a different image-sequence frame-range or some other detail thats different. Generally it saves time too, since developers don't have to guess / trial and error to attempt to re-create the error case,
Member

Added subscriber: @xuekepei

Added subscriber: @xuekepei
Member

I also encounter this crash.
System Information
win8.1 64bit | k2100M

as follow the step add image enable backdrop crash, it report in the console

Error: EXCEPTION_ACCESS_VIOLATION   

enable or disable i18n the result is the same.

I also encounter this crash. System Information win8.1 64bit | k2100M as follow the step add image enable backdrop crash, it report in the console ``` Error: EXCEPTION_ACCESS_VIOLATION ``` enable or disable i18n the result is the same.
Author
Member

Actually, there are several crash triggers here, all related to backdrop. See this video: https://youtu.be/GWx4XrIQilA

Actually, there are several crash triggers here, all related to backdrop. See this video: https://youtu.be/GWx4XrIQilA
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

I was also able to reproduce currently it looks like a windows issue.

I was also able to reproduce currently it looks like a windows issue.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by bf54dcc3c9

This issue was referenced by bf54dcc3c952e207e7c8e7596069152307f61ea3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48589
No description provided.