Fix T48589: Compositor Backdrop crashes Blender